--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"utils",
 		"utilities"
 	],
-	"repository": "medikoo/es5-ext",
+	"repository": "https://github.com/apsasinka/es5-ext",
 	"dependencies": {
 		"es6-iterator": "^2.0.3",
 		"es6-symbol": "^3.1.3",
@@ -71,12 +71,6 @@
 				"rules": {
 					"strict": "off"
 				}
-			},
-			{
-				"files": "_postinstall.js",
-				"env": {
-					"node": true
-				}
 			}
 		]
 	},
@@ -113,7 +107,6 @@
 		"coverage": "nyc npm test",
 		"lint": "eslint --ignore-path=.gitignore .",
 		"lint:updated": "pipe-git-updated --base=main --ext=js -- eslint --ignore-pattern '!*'",
-		"postinstall": " node -e \"try{require('./_postinstall')}catch(e){}\" || exit 0",
 		"prettier-check": "prettier -c --ignore-path .gitignore \"**/*.{css,html,js,json,md,yaml,yml}\"",
 		"prettier-check:updated": "pipe-git-updated --base=main --ext=css --ext=html --ext=js --ext=json --ext=md --ext=yaml --ext=yml -- prettier -c",
 		"prettify": "prettier --write --ignore-path .gitignore \"**/*.{css,html,js,json,md,yaml,yml}\"",
